# trajectory_visualization

./: CMakeLists.txt  README.md  package.xml
launch/: trajectory_visualizer.launch
rviz/: trajectory-2.rviz  trajectory.rviz
src/: hw_test_node.cpp  trajectory_publisher_saver_node.cpp  trajectory_reader_publisher.cpp
srv/: SaveTrajectory.srv
